fix(wip): csv export